use secretFormat variable