@@ -41,6 +41,8 @@ public class QuarkusCliConfigEncryptIT {
 
     private static QuarkusEncryptConfigCommandBuilder encryptBuilder = null;
     private static String encryptionKey = null;
+    private static final String secretFormat = OS.WINDOWS.isCurrentOs() ? "\"%s\"" : "%s";
+
 
     @Inject
     static QuarkusConfigCommand configCommand;
@@ -51,6 +53,7 @@ public class QuarkusCliConfigEncryptIT {
                 .withSmallRyeConfigCryptoDep()
                 .encryptBuilder()
                 .withSmallRyeConfigSourceKeystoreDep();
+
     }
 
     @Order(1)
@@ -63,9 +66,10 @@ public class QuarkusCliConfigEncryptIT {
                 .secretConsumer(Assertions::assertNotNull)
                 .storeSecretAsSecretExpression(SECRET_1.propertyName)
                 .generatedKeyConsumer(encKey -> encryptionKey = encKey)
-                .assertCommandOutputContains("""
-                        The secret "%s" was encrypted to
-                        """.formatted(SECRET_1.secret))
+                /*.assertCommandOutputContains("""
+                        The secret %s was encrypted to
+                        """.formatted(SECRET_1.secret))*/
+                .assertCommandOutputContains(String.format("The secret " + secretFormat + " was encrypted to", SECRET_1.secret))
                 .assertCommandOutputContains("""
                         with the generated encryption key (base64):
                         """);
